--- a/shared/scss/atoms/mat-drawer.module.scss
+++ b/shared/scss/atoms/mat-drawer.module.scss
@@ -14,7 +14,7 @@
   background-color: var(--mat-sys-surface, #fef7ff);
   color: var(--mat-sys-on-surface, #1c1b1f);
   box-shadow: var(--mat-sys-elevation-level1, 0px 1px 3px 1px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.3));
-  z-index: 1200;
+  z-index: 1201;
   overflow-y: auto;
   transition: transform 225ms cubic-bezier(0, 0, 0.2, 1);
 }
